@@ -17,7 +17,7 @@ dde \- Execute a Dynamic Data Exchange command
 .sp
 \fBpackage require dde 1.2\fR
 .sp
-\fBdde \fIservername\fR ?\fI-exact\fR? ?\fI-handler proc\fR? ?\fI--\fR? ?\fItopic\fR?
+\fBdde \fIservername\fR ?\fI-force\fR? ?\fI-handler proc\fR? ?\fI--\fR? ?\fItopic\fR?
 .sp
 \fBdde \fIexecute\fR ?\fI\-async\fR? \fIservice topic \fR?\fIdata\fR?
 .sp
@@ -50,7 +50,7 @@ The \fBeval\fR and \fBexecute\fR commands accept the option \fB\-async\fR:
 The following commands are a subset of the full Dynamic Data Exchange
 set of commands.
 .TP
-\fBdde servername \fR?\fI-exact\fR? ?\fI-handler proc\fR? ?\fI--\fR? ?\fItopic\fR?
+\fBdde servername \fR?\fI-force\fR? ?\fI-handler proc\fR? ?\fI--\fR? ?\fItopic\fR?
 \fBdde servername\fR registers the interpreter as a DDE server with
 the service name \fBTclEval\fR and the topic name specified by \fItopic\fR.
 If no \fItopic\fR is given, \fBdde servername\fR returns the name
@@ -58,7 +58,7 @@ of the current topic or the empty string if it is not registered as a
 service. If the given \fItopic\fR name is already in use, then a
 suffix of the form ' #2' or ' #3' is appended to the name to make it
 unique. The command's result will be the name actually used. The
-\fI-exact\fR option is used to force registration of precisely the
+\fI-force\fR option is used to force registration of precisely the
 given \fItopic\fR name.
 .IP
 The \fI-handler\fR option specifies a tcl procedure that will be called to
